# audio-samples

./: Cargo.toml  build.rs
benches/: audio_generation.rs
src/: audio.rs  chord.rs  data.rs  effects.rs  lib.rs  log_uniform.rs
src/parameters/: data.rs  effects.rs  mod.rs  oscillators.rs
