[package]
name = "audio_samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hound = "3.5.0"
anyhow = "1.0.65"
flexblock-synth = { git="https://gitlab.com/albertsgarde/flexblocksynth" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rustfft = "6.0.1"
